# Homework

./: README.md  cloud_to_map.py
my_first_package/: CMakeLists.txt  package.xml
my_first_package/config/: turtle_config.yaml
my_first_package/launch/: homework.launch.py  param_demo.launch.py
my_first_package/my_first_package/: add_two_ints_client.py  hello_node.py  my_teleop.py  param_node.py  py_listener.py  py_talker.py  turtle_controller.py
my_first_package/src/: add_two_ints_server.cpp  cpp_talker.cpp  hello_node.cpp  param_node.cpp
orbbec_vision_tasks/: README.md
orbbec_vision_tasks/task1_depth_driver/: list_profiles.cpp
orbbec_vision_tasks/task2_qr_code/: CMakeLists.txt  README.md  qr_scanner.cpp
orbbec_vision_tasks/task3_yolov8_detection/: README.md  orbbec_capture.cpp  yolo_detect.py
orbbec_vision_tasks/task4_custom_training/: README.md
orbbec_vision_tasks/task4_custom_training/dataset/: classes.txt  dataset.yaml  dataset_aug.yaml
orbbec_vision_tasks/task4_custom_training/scripts/: augment.py  label_tool.py  train.py  train_v2.py  train_v3.py
orbbec_vision_tasks/task5_depth_coordinates/: README.md  orbbec_rgbd_capture.cpp  yolo_rgbd_detect.py
orbbec_vision_tasks/task_pro/: yolo_seg.py
